--- a/UTFXml.vcxproj
+++ b/UTFXml.vcxproj
@@ -1,28 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
-    <ProjectConfiguration Include="pc-vc-dev-debug|Win32">
-      <Configuration>pc-vc-dev-debug</Configuration>
+    <ProjectConfiguration Include="Debug|Win32">
+      <Configuration>Debug</Configuration>
       <Platform>Win32</Platform>
     </ProjectConfiguration>
-    <ProjectConfiguration Include="pc-vc-dev-opt|Win32">
-      <Configuration>pc-vc-dev-opt</Configuration>
+    <ProjectConfiguration Include="Release|Win32">
+      <Configuration>Release</Configuration>
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{039A01FC-1E15-A313-FBEF-F672B5606B80}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <ProjectName>UTFXmlEAWebKit</ProjectName>
+    <ProjectName>UTFXml</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'pc-vc-dev-debug|Win32' " Label="Configuration">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|Win32' " Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <CharacterSet>MultiByte</CharacterSet>
     <PlatformToolset>v100</PlatformToolset>
     <UseDebugLibraries>True</UseDebugLibraries>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'pc-vc-dev-opt|Win32' " Label="Configuration">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|Win32' " Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <CharacterSet>MultiByte</CharacterSet>
     <PlatformToolset>v100</PlatformToolset>
@@ -32,14 +32,14 @@
   <ImportGroup Label="ExtensionSettings">
     <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.props" />
   </ImportGroup>
-  <ImportGroup Condition=" '$(Configuration)|$(Platform)' == 'pc-vc-dev-debug|Win32' " Label="PropertySheets">
+  <ImportGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|Win32' " Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <ItemDefinitionGroup Condition=" '$(Configuration)|$(Platform)' == 'pc-vc-dev-debug|Win32' ">
+  <ItemDefinitionGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|Win32' ">
     <Midl />
     <ClCompile>
-      <AdditionalIncludeDirectories>"..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\include";"..\..\..\..\EAWebKitSupportPackages\coreallocatorEAWebKit\local-1.03.10-01\include";"..\..\..\..\EAWebKitSupportPackages\EABaseEAWebKit\local-2.00.35-01\include\Common";"..\..\..\..\EAWebKitSupportPackages\EASTLEAWebKit\local-1.15.03-01\include";"..\..\..\..\EAWebKitSupportPackages\EAAssertEAWebKit\local-1.03.04-01\include";"..\..\..\..\EAWebKitSupportPackages\EAIOEAWebKit\local-01\include";"..\..\..\..\EAWebKitSupportPackages\EAIOEAWebKit\local-01\include\EAIO\Wii";"$(VSInstallDir)\VC\ATLMFC\INCLUDE";"$(VSInstallDir)\VC\INCLUDE";"$(WindowsSDKDir)\include";"$(VSInstallDir)\SDK\v2.0\include";"$(VSInstallDir)\INCLUDE"</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>"include";"..\coreallocator\include";"..\EABase\include\Common";"..\EASTL\include";"..\EAAssert\include";"..\EAIO\include";"$(VSInstallDir)\VC\ATLMFC\INCLUDE";"$(VSInstallDir)\VC\INCLUDE";"$(WindowsSDKDir)\include";"$(VSInstallDir)\SDK\v2.0\include";"$(VSInstallDir)\INCLUDE"</AdditionalIncludeDirectories>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <BufferSecurityCheck>FALSE</BufferSecurityCheck>
       <CompileAs>Default</CompileAs>
@@ -55,7 +55,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PreprocessorDefinitions>_CHAR16T;_CRT_SECURE_NO_WARNINGS;_DEBUG;_HAS_CPP0X=0;_HAS_EXCEPTIONS=0;_SECURE_SCL=1;_WIN32_IE=0x0502;_WIN32_WINNT=0x0502;EA_DEBUG;UTF_USE_EAASSERT=1;WIN32;WINVER=0x0502</PreprocessorDefinitions>
       <ProcessorNumber>8</ProcessorNumber>
-      <ProgramDataBaseFileName>pc-vc-dev-debug\lib\UTFXmlEAWebKit.pdb</ProgramDataBaseFileName>
+      <ProgramDataBaseFileName>Debug\lib\UTFXml.pdb</ProgramDataBaseFileName>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <RuntimeTypeInfo>FALSE</RuntimeTypeInfo>
       <SuppressStartupBanner>TRUE</SuppressStartupBanner>
@@ -63,18 +63,18 @@
       <WarningLevel>EnableAllWarnings</WarningLevel>
     </ClCompile>
     <Lib>
-      <OutputFile>pc-vc-dev-debug\lib\UTFXmlEAWebKit.lib</OutputFile>
+      <OutputFile>Debug\lib\UTFXml.lib</OutputFile>
       <SuppressStartupBanner>TRUE</SuppressStartupBanner>
     </Lib>
     <PreBuildEvent>
-      <Command>@if not exist "pc-vc-dev-debug\lib" mkdir "pc-vc-dev-debug\lib" &amp; SET ERRORLEVEL=0
-@if not exist "pc-vc-dev-debug\build\UTFXmlEAWebKit" mkdir "pc-vc-dev-debug\build\UTFXmlEAWebKit" &amp; SET ERRORLEVEL=0</Command>
+      <Command>@if not exist "Debug\lib" mkdir "Debug\lib" &amp; SET ERRORLEVEL=0
+@if not exist "Debug\build\UTFXml" mkdir "Debug\build\UTFXml" &amp; SET ERRORLEVEL=0</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'pc-vc-dev-debug|Win32' ">
-    <OutDir>pc-vc-dev-debug\lib\</OutDir>
-    <IntDir>pc-vc-dev-debug\build\UTFXmlEAWebKit\vstmp\</IntDir>
-    <TargetName>UTFXmlEAWebKit</TargetName>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|Win32' ">
+    <OutDir>Debug\lib\</OutDir>
+    <IntDir>Debug\build\UTFXml\vstmp\</IntDir>
+    <TargetName>UTFXml</TargetName>
     <TargetExt>.lib</TargetExt>
     <ExecutablePath>$(ExecutablePath)</ExecutablePath>
     <IncludePath>$(IncludePath)</IncludePath>
@@ -83,14 +83,14 @@
     <SourcePath>$(SourcePath)</SourcePath>
     <ExcludePath>$(ExcludePath)</ExcludePath>
   </PropertyGroup>
-  <ImportGroup Condition=" '$(Configuration)|$(Platform)' == 'pc-vc-dev-opt|Win32' " Label="PropertySheets">
+  <ImportGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|Win32' " Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <ItemDefinitionGroup Condition=" '$(Configuration)|$(Platform)' == 'pc-vc-dev-opt|Win32' ">
+  <ItemDefinitionGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|Win32' ">
     <Midl />
     <ClCompile>
-      <AdditionalIncludeDirectories>"..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\include";"..\..\..\..\EAWebKitSupportPackages\coreallocatorEAWebKit\local-1.03.10-01\include";"..\..\..\..\EAWebKitSupportPackages\EABaseEAWebKit\local-2.00.35-01\include\Common";"..\..\..\..\EAWebKitSupportPackages\EASTLEAWebKit\local-1.15.03-01\include";"..\..\..\..\EAWebKitSupportPackages\EAAssertEAWebKit\local-1.03.04-01\include";"..\..\..\..\EAWebKitSupportPackages\EAIOEAWebKit\local-01\include";"..\..\..\..\EAWebKitSupportPackages\EAIOEAWebKit\local-01\include\EAIO\Wii";"$(VSInstallDir)\VC\ATLMFC\INCLUDE";"$(VSInstallDir)\VC\INCLUDE";"$(WindowsSDKDir)\include";"$(VSInstallDir)\SDK\v2.0\include";"$(VSInstallDir)\INCLUDE"</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>"include";"..\coreallocator\include";"..\EABase\include\Common";"..\EASTL\include";"..\EAAssert\include";"..\EAIO\include";"$(VSInstallDir)\VC\ATLMFC\INCLUDE";"$(VSInstallDir)\VC\INCLUDE";"$(WindowsSDKDir)\include";"$(VSInstallDir)\SDK\v2.0\include";"$(VSInstallDir)\INCLUDE"</AdditionalIncludeDirectories>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
       <BufferSecurityCheck>FALSE</BufferSecurityCheck>
       <CompileAs>Default</CompileAs>
@@ -106,7 +106,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PreprocessorDefinitions>_CHAR16T;_CRT_SECURE_NO_WARNINGS;_HAS_CPP0X=0;_HAS_EXCEPTIONS=0;_SECURE_SCL=0;_WIN32_IE=0x0502;_WIN32_WINNT=0x0502;NDEBUG;UTF_USE_EAASSERT=1;WIN32;WINVER=0x0502</PreprocessorDefinitions>
       <ProcessorNumber>8</ProcessorNumber>
-      <ProgramDataBaseFileName>pc-vc-dev-opt\lib\UTFXmlEAWebKit.pdb</ProgramDataBaseFileName>
+      <ProgramDataBaseFileName>Release\lib\UTFXml.pdb</ProgramDataBaseFileName>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <RuntimeTypeInfo>FALSE</RuntimeTypeInfo>
       <SuppressStartupBanner>TRUE</SuppressStartupBanner>
@@ -114,18 +114,18 @@
       <WarningLevel>EnableAllWarnings</WarningLevel>
     </ClCompile>
     <Lib>
-      <OutputFile>pc-vc-dev-opt\lib\UTFXmlEAWebKit.lib</OutputFile>
+      <OutputFile>Release\lib\UTFXml.lib</OutputFile>
       <SuppressStartupBanner>TRUE</SuppressStartupBanner>
     </Lib>
     <PreBuildEvent>
-      <Command>@if not exist "pc-vc-dev-opt\lib" mkdir "pc-vc-dev-opt\lib" &amp; SET ERRORLEVEL=0
-@if not exist "pc-vc-dev-opt\build\UTFXmlEAWebKit" mkdir "pc-vc-dev-opt\build\UTFXmlEAWebKit" &amp; SET ERRORLEVEL=0</Command>
+      <Command>@if not exist "Release\lib" mkdir "Release\lib" &amp; SET ERRORLEVEL=0
+@if not exist "Release\build\UTFXml" mkdir "Release\build\UTFXml" &amp; SET ERRORLEVEL=0</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'pc-vc-dev-opt|Win32' ">
-    <OutDir>pc-vc-dev-opt\lib\</OutDir>
-    <IntDir>pc-vc-dev-opt\build\UTFXmlEAWebKit\vstmp\</IntDir>
-    <TargetName>UTFXmlEAWebKit</TargetName>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|Win32' ">
+    <OutDir>Release\lib\</OutDir>
+    <IntDir>Release\build\UTFXml\vstmp\</IntDir>
+    <TargetName>UTFXml</TargetName>
     <TargetExt>.lib</TargetExt>
     <ExecutablePath>$(ExecutablePath)</ExecutablePath>
     <IncludePath>$(IncludePath)</IncludePath>
@@ -135,21 +135,21 @@
     <ExcludePath>$(ExcludePath)</ExcludePath>
   </PropertyGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\include\UTFXml\XmlCallbackReader.h" />
-    <ClInclude Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\include\UTFXml\XmlCharClasses.inl" />
-    <ClInclude Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\include\UTFXml\XmlDomReader.h" />
-    <ClInclude Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\include\UTFXml\XmlEncoding.h" />
-    <ClInclude Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\include\UTFXml\XmlReader.h" />
-    <ClInclude Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\include\UTFXml\XmlTokenBuffer.h" />
-    <ClInclude Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\include\UTFXml\XmlWriter.h" />
-    <ClCompile Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\source\XmlCallbackReader.cpp" />
-    <ClCompile Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\source\XmlDomReader.cpp" />
-    <ClCompile Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\source\XmlEncoding.cpp" />
-    <ClCompile Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\source\XmlReader.cpp" />
-    <ClCompile Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\source\XmlReaderErrors.cpp" />
-    <ClCompile Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\source\XmlTokenBuffer.cpp" />
-    <ClCompile Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\source\XmlWriter.cpp" />
-    <ClCompile Include="..\..\..\..\EAWebKitSupportPackages\UTFXmlEAWebKit\local-3.08.01-01\source\internal\UTFXmlCoreAllocator.cpp" />
+    <ClInclude Include="include\UTFXml\XmlCallbackReader.h" />
+    <ClInclude Include="include\UTFXml\XmlCharClasses.inl" />
+    <ClInclude Include="include\UTFXml\XmlDomReader.h" />
+    <ClInclude Include="include\UTFXml\XmlEncoding.h" />
+    <ClInclude Include="include\UTFXml\XmlReader.h" />
+    <ClInclude Include="include\UTFXml\XmlTokenBuffer.h" />
+    <ClInclude Include="include\UTFXml\XmlWriter.h" />
+    <ClCompile Include="source\XmlCallbackReader.cpp" />
+    <ClCompile Include="source\XmlDomReader.cpp" />
+    <ClCompile Include="source\XmlEncoding.cpp" />
+    <ClCompile Include="source\XmlReader.cpp" />
+    <ClCompile Include="source\XmlReaderErrors.cpp" />
+    <ClCompile Include="source\XmlTokenBuffer.cpp" />
+    <ClCompile Include="source\XmlWriter.cpp" />
+    <ClCompile Include="source\internal\UTFXmlCoreAllocator.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
@@ -157,7 +157,7 @@
   </ImportGroup>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties platform_pc-vc-dev-debug_Win32="vc" vc-compiler="$(VSInstallDir)\VC\BIN\cl.exe" vc-compiler_clang="" vc-asm="$(VSInstallDir)\VC\BIN\ml.exe" vc-librarian="$(VSInstallDir)\VC\BIN\lib.exe" platform_pc-vc-dev-opt_Win32="vc" build.env.PATH="$(VSInstallDir)\Common7\IDE"></UserProperties>
+      <UserProperties platform_Debug_Win32="vc" vc-compiler="$(VSInstallDir)\VC\BIN\cl.exe" vc-compiler_clang="" vc-asm="$(VSInstallDir)\VC\BIN\ml.exe" vc-librarian="$(VSInstallDir)\VC\BIN\lib.exe" platform_Release_Win32="vc" build.env.PATH="$(VSInstallDir)\Common7\IDE"></UserProperties>
     </VisualStudio>
   </ProjectExtensions>
 </Project>
